[package]
name = "c33d"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.9", features = ["derive"] }
embedded-graphics = "0.7.1"
futures-util = "0.3.21"
lazy_static = "1.4.0"
log = "0.4.16"
pretty_env_logger = "0.4.0"
prometheus = { version = "0.13.0", features = ["process"], default-features = false }
rayon = "1.5.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tinybmp = "0.3.2"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
